--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,6 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    environment: dev
 
     steps:
       - name: ✅ 코드 체크아웃
@@ -33,17 +32,28 @@ jobs:
         run: ./gradlew bootJar --no-daemon --parallel -x test
 
       - name: 🔐 SSH 키 설정
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
+          EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.DEV_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.DEV_EC2_HOST }} >> ~/.ssh/known_hosts
+          ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
 
       - name: 📦 배포 파일 전송 (JAR & 스크립트)
+        env:
+          EC2_USER: ${{ secrets.DEV_EC2_USER }}
+          EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
         run: |
           chmod +x scripts/deploy.sh
-          rsync -az build/libs/*.jar scripts/deploy.sh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }}:/home/ubuntu/
+          # JAR 파일을 app-new.jar로 이름 변경하여 전송
+          scp build/libs/*.jar $EC2_USER@$EC2_HOST:/home/ubuntu/app-new.jar
+          scp scripts/deploy.sh $EC2_USER@$EC2_HOST:/home/ubuntu/deploy.sh
 
       - name: 🚀 EC2 무중단 배포 실행
+        env:
+          EC2_USER: ${{ secrets.DEV_EC2_USER }}
+          EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
         run: |
-          ssh ${{ secrets.DEV_EC2_USER }}@${{ secrets.DEV_EC2_HOST }} "bash /home/ubuntu/deploy.sh"
+          ssh $EC2_USER@$EC2_HOST "bash /home/ubuntu/deploy.sh"
