--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,53 +7,42 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      EC2_USER: ${{ secrets.DEV_EC2_USER }}
+      EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
 
     steps:
-      - name: ✅ 코드 체크아웃
+      - name: ✅ 체크아웃
         uses: actions/checkout@v4
 
       - name: ☕ Java 24 설정
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '24'
+          distribution: temurin
+          java-version: 24
 
-      - name: 🔁 Gradle 캐시 복원
+      - name: 🔁 Gradle 캐시
         uses: actions/cache@v4
         with:
           path: |
             ~/.gradle/caches
             ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', '**/gradle-wrapper.properties', '**/settings.gradle') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: ${{ runner.os }}-gradle-
 
-      - name: 🧱 Gradle로 JAR 빌드 (테스트 생략)
+      - name: 🧱 빌드
         run: ./gradlew bootJar --no-daemon --parallel -x test
 
-      - name: 🔐 SSH 키 설정
+      - name: 🚀 배포
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
-          EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
+          SSH_KEY: ${{ secrets.DEV_SSH_PRIVATE_KEY }}
         run: |
           mkdir -p ~/.ssh
-          echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa
+          echo "$SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
 
-      - name: 📦 배포 파일 전송 (JAR & 스크립트)
-        env:
-          EC2_USER: ${{ secrets.DEV_EC2_USER }}
-          EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
-        run: |
-          chmod +x scripts/deploy.sh
-          # JAR 파일을 app-new.jar로 이름 변경하여 전송
           scp build/libs/*.jar $EC2_USER@$EC2_HOST:/home/ubuntu/app-new.jar
           scp scripts/deploy.sh $EC2_USER@$EC2_HOST:/home/ubuntu/deploy.sh
 
-      - name: 🚀 EC2 무중단 배포 실행
-        env:
-          EC2_USER: ${{ secrets.DEV_EC2_USER }}
-          EC2_HOST: ${{ secrets.DEV_EC2_HOST }}
-        run: |
           ssh $EC2_USER@$EC2_HOST "bash /home/ubuntu/deploy.sh"
