--- a/.gitignore
+++ b/.gitignore
@@ -173,6 +173,8 @@ Temporary Items
 .gradle/
 build/
 gradle-app.setting
+!**/src/main/**/build/
+!**/src/test/**/build/
 
 # 로그 파일들
 logs/
@@ -185,10 +187,31 @@ logs/
 .env.test
 .env.production
 
+# Spring Boot 관련
+# 로컬 환경 설정 파일 (민감 정보 포함 가능)
+application-local.yml
+application-local.yaml
+application-local.properties
+application-dev.yml
+application-dev.yaml
+application-dev.properties
+# 프로덕션 설정은 반드시 제외
+application-prod.yml
+application-prod.yaml
+application-prod.properties
+
 # 데이터베이스 관련
 *.db
 *.sqlite
 *.sqlite3
+h2/
+*.h2.db
+
+# 업로드/다운로드 파일
+uploads/
+downloads/
+files/
+attachments/
 
 # 임시 파일들
 temp/
@@ -201,15 +224,46 @@ tmp/
 *.backup
 *.old
 
+# 테스트 결과
+test-results/
+test-output/
+coverage/
+.coverage
+htmlcov/
+
 # IDE 설정 파일들 (IntelliJ 외)
 *.swp
 *.swo
 *~
+.vscode/
+.project
+.classpath
+.settings/
+bin/
 
 # OS 생성 파일들
 Thumbs.db
 ehthumbs.db
 Desktop.ini
 
+# 보안 관련 파일
+*.pem
+*.key
+*.p12
+*.jks
+*.keystore
+secrets/
+credentials/
+
+# 문서 생성 파일
+*.pdf
+*.docx
+*.xlsx
+# 단, docs 폴더의 문서는 포함할 수 있음
+!docs/**/*.pdf
+!docs/**/*.docx
+
 # 예외 규칙: Gradle Wrapper JAR 파일은 포함
 !gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**/build/
+!**/src/test/**/build/
