✨ Settings.json QueryDSL 생성 파일 경로를 소스 경로에 추가

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,15 @@
 {
     // =========================================================================
+    // QueryDSL 설정 (QueryDSL Configuration)
+    // =========================================================================
+    // QueryDSL 생성 파일 경로를 소스 경로에 추가
+    "java.project.sourcePaths": [
+        "src/main/java",
+        "build/generated/querydsl"
+    ],
+    // Java 컴파일 출력 경로
+    "java.project.outputPath": "bin",
+    // =========================================================================
     // Java 핵심 설정 (Java Core Settings)
     // =========================================================================
     // 컴파일 시 null 분석 모드를 자동으로 설정합니다.
