--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -37,12 +37,18 @@ jobs:
           EC2_USER: ${{ secrets.PROD_EC2_USER }}
           EC2_HOST: ${{ secrets.PROD_EC2_HOST }}
         run: |
+          # SSH 키 설정 (보안 강화)
           mkdir -p ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/id_rsa
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H $EC2_HOST >> ~/.ssh/known_hosts
 
+          # JAR 파일 및 배포 스크립트 전송
           scp build/libs/*.jar $EC2_USER@$EC2_HOST:/home/ubuntu/app-new.jar
           scp scripts/deploy.sh $EC2_USER@$EC2_HOST:/home/ubuntu/deploy.sh
 
+          # 배포 실행
           ssh $EC2_USER@$EC2_HOST "bash /home/ubuntu/deploy.sh"
+
+          # SSH 키 정리 (보안)
+          rm -f ~/.ssh/id_rsa
