✨ 개발서버 배포 알림 테스트

--- a/.github/workflows/deploy-common.yml
+++ b/.github/workflows/deploy-common.yml
@@ -14,6 +14,8 @@ on:
         required: true
       EC2_HOST:
         required: true
+      SLACK_WEBHOOK_URL:
+        required: false
 
 jobs:
   deploy:
@@ -23,6 +25,33 @@ jobs:
     steps:
       - name: ✅ 체크아웃
         uses: actions/checkout@v4
+
+      - name: 📢 Slack 배포 시작 알림
+        if: ${{ secrets.SLACK_WEBHOOK_URL != '' }}
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B | head -n 1)
+          COMMIT_AUTHOR=$(git log -1 --pretty=%an)
+          COMMIT_HASH=$(git log -1 --pretty=%h)
+
+          curl -X POST $SLACK_WEBHOOK \
+            -H "Content-Type: application/json" \
+            -d "{
+              \"attachments\": [{
+                \"color\": \"#2196F3\",
+                \"title\": \"🚀 배포 시작\",
+                \"fields\": [
+                  {\"title\": \"환경\", \"value\": \"\`${{ inputs.environment }}\`\", \"short\": true},
+                  {\"title\": \"브랜치\", \"value\": \"\`${{ github.ref_name }}\`\", \"short\": true},
+                  {\"title\": \"커밋\", \"value\": \"\`${COMMIT_HASH}\`\", \"short\": true},
+                  {\"title\": \"배포자\", \"value\": \"${COMMIT_AUTHOR}\", \"short\": true},
+                  {\"title\": \"메시지\", \"value\": \"${COMMIT_MSG}\", \"short\": false}
+                ],
+                \"footer\": \"ERP API Server\",
+                \"ts\": $(date +%s)
+              }]
+            }"
 
       - name: ☕ Java 24 설정
         uses: actions/setup-java@v4
@@ -63,3 +92,69 @@ jobs:
 
           # SSH 키 정리 (보안)
           rm -f ~/.ssh/id_rsa
+
+      - name: ✅ Slack 배포 성공 알림
+        if: ${{ success() && secrets.SLACK_WEBHOOK_URL != '' }}
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B | head -n 1)
+          COMMIT_AUTHOR=$(git log -1 --pretty=%an)
+          COMMIT_HASH=$(git log -1 --pretty=%h)
+
+          curl -X POST $SLACK_WEBHOOK \
+            -H "Content-Type: application/json" \
+            -d "{
+              \"attachments\": [{
+                \"color\": \"#4CAF50\",
+                \"title\": \"✅ 배포 성공\",
+                \"text\": \"*${{ inputs.environment }}* 서버에 성공적으로 배포되었습니다!\",
+                \"fields\": [
+                  {\"title\": \"환경\", \"value\": \"\`${{ inputs.environment }}\`\", \"short\": true},
+                  {\"title\": \"브랜치\", \"value\": \"\`${{ github.ref_name }}\`\", \"short\": true},
+                  {\"title\": \"커밋\", \"value\": \"\`${COMMIT_HASH}\`\", \"short\": true},
+                  {\"title\": \"배포자\", \"value\": \"${COMMIT_AUTHOR}\", \"short\": true},
+                  {\"title\": \"메시지\", \"value\": \"${COMMIT_MSG}\", \"short\": false}
+                ],
+                \"actions\": [{
+                  \"type\": \"button\",
+                  \"text\": \"배포 로그 보기\",
+                  \"url\": \"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\"
+                }],
+                \"footer\": \"ERP API Server\",
+                \"ts\": $(date +%s)
+              }]
+            }"
+
+      - name: ❌ Slack 배포 실패 알림
+        if: ${{ failure() && secrets.SLACK_WEBHOOK_URL != '' }}
+        env:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+        run: |
+          COMMIT_MSG=$(git log -1 --pretty=%B | head -n 1)
+          COMMIT_AUTHOR=$(git log -1 --pretty=%an)
+          COMMIT_HASH=$(git log -1 --pretty=%h)
+
+          curl -X POST $SLACK_WEBHOOK \
+            -H "Content-Type: application/json" \
+            -d "{
+              \"attachments\": [{
+                \"color\": \"#F44336\",
+                \"title\": \"❌ 배포 실패\",
+                \"text\": \"*${{ inputs.environment }}* 서버 배포에 실패했습니다. 로그를 확인해주세요.\",
+                \"fields\": [
+                  {\"title\": \"환경\", \"value\": \"\`${{ inputs.environment }}\`\", \"short\": true},
+                  {\"title\": \"브랜치\", \"value\": \"\`${{ github.ref_name }}\`\", \"short\": true},
+                  {\"title\": \"커밋\", \"value\": \"\`${COMMIT_HASH}\`\", \"short\": true},
+                  {\"title\": \"배포자\", \"value\": \"${COMMIT_AUTHOR}\", \"short\": true},
+                  {\"title\": \"메시지\", \"value\": \"${COMMIT_MSG}\", \"short\": false}
+                ],
+                \"actions\": [{
+                  \"type\": \"button\",
+                  \"text\": \"배포 로그 보기\",
+                  \"url\": \"${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}\"
+                }],
+                \"footer\": \"ERP API Server\",
+                \"ts\": $(date +%s)
+              }]
+            }"
