--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
     "java.completion.importOrder": [
         "java",
         "javax",
+        "jakarta",
         "org",
         "com"
     ],
